# View

./: README.md
TheViewProject/: Liesmich.txt  docker-compose.yml
TheViewProject/documentation/: Dockerfile
TheViewProject/server/: Dockerfile
doku/: View-Architecture.vsdx
doku/Diagrams/: View Architecture.xml
doku/Json/Camera-Server/: 0CameraToServerInit.json  1ServerToCameraAuth.json  2CameraToServerAuth.json  3ServerToCameraAuthConfirmation.json  4CameraToServerData.json
doku/Json/Frontend-Server/: 6FrontendToServerInit.json  FrontendToServerDataRequest.json  ServerToFrontendData.json
doku/mkdocs/: Howtostart.txt  mkdocs.yml
doku/mkdocs/docs/: downloads.md  index.md
doku/mkdocs/docs/architecture/: frontend.md  index.md  iotdevice.md
doku/mkdocs/docs/css/: extra.css
doku/mkdocs/docs/dev/: ci.md
doku/mkdocs/docs/dev/frontend/: architecture.md  compile.md
doku/mkdocs/docs/dev/frontend/modules/: webapp.md  wifi.md
doku/mkdocs/docs/dev/frontend/tests/: addBuilding.md  addFloor.md  addRoom.md  addiotdevice.md  building.md  editBuilding.md  editFloor.md  editRoom.md  floor.md  index.md  login.md  nav-content.md  register.md  room.md  settings.md
doku/mkdocs/docs/dev/interfaces/: frontendServer.md  iotDeviceServer.md  wifiFrontendIotDevice.md
doku/mkdocs/docs/dev/iotdevice/: architecture.md  compile.md
doku/mkdocs/docs/dev/iotdevice/modules/: core.md  wifi.md
doku/mkdocs/docs/dev/iotdevice/tests/: core.md  wifi.md
doku/mkdocs/docs/dev/server/: architecture.md  compile.md
doku/mkdocs/docs/dev/server/modules/: dbaccess.md  service.md  shared.md  webapi.md  (+1 more)
doku/mkdocs/docs/getting-started/: person-detector.md  server.md
doku/mkdocs/docs/img/iot/: iot_core.xml  iot_dependency_graph.xml  iot_wificonnector.xml
doku/mkdocs/docs/img/server/: server dependency graph.xml
doku/mkdocs/docs/manual/: frontend.md  person-detector.md  server.md
frontend/Register/: README.md  angular.json  package-lock.json  package.json  tslint.json
frontend/Register/src/: index.html  styles.css  theme.scss
frontend/Register/src/app/: app.component.html  app.module.ts  material.module.ts
frontend/Register/src/app/service/: data.service.ts  wifi.model.ts
frontend/Register/src/app/wifi/: wifi.component.css  wifi.component.html  wifi.component.ts  wifi.status.ts
frontend/View/: .gitignore  angular.json  package-lock.json  package.json
frontend/View/src/: index.html  styles.css  theme.scss
frontend/View/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  material.module.ts
frontend/View/src/app/guards/: auth.guard.ts
frontend/View/src/app/models/: building.ts  floor.ts  ioTDevice.ts  message.ts  occupation.ts  occupationDateString.ts  room.ts
frontend/View/src/app/properties/: properties.ts
frontend/View/src/environments/: environment.prod.ts  environment.ts
iot-client/: .gitignore  CMakeLists.txt  configuration.json
iot-client/lib/cpp-httplib/: httplib.h
iot-client/scripts/: start_ap.sh  stop_ap.sh  wifi.sh
iot-client/service/: view-iot-client.service
iot-client/src/core/: CMakeLists.txt  Detection.cpp  Detection.h  IotClient.cpp  IotClient.h  MessageType.h  OutputWriter.cpp  OutputWriter.h  WebsocketConnection.cpp  WebsocketConnection.h
iot-client/src/main/: CMakeLists.txt  main.cpp
iot-client/src/util/: CMakeLists.txt  Util.cpp  Util.h
iot-client/src/wifiConnector/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  IwlistScanParser.cpp  IwlistScanParser.h  LinuxSystemAccess.cpp  LinuxSystemAccess.h  Wifi.h  WifiConnector.cpp  WifiConnector.h  wifiJsonConverter.h
iot-client/src/wifiConnector/exceptions/: WifiInterfaceBusyExeption.h
iot-client/test/: CMakeLists.txt
iot-client/test/core/: CMakeLists.txt  DetectionTest.cpp  DetectionTest.h
iot-client/test/wifiConnector/: CMakeLists.txt  IwListScannData.h  IwlistScanParserTest.cpp  IwlistScanParserTest.h
other/: Logo.ai
server/: View.Server.sln
server/View.Server.DbAccess/: BuildingDataAccess.cs  FloorDataAccess.cs  IoTDeviceDataAccess.cs  OccupationDataAccess.cs  RoomDataAccess.cs  View.Server.DbAccess.csproj  ViewDataContext.cs
server/View.Server.Service/: View.Server.Service.csproj
server/View.Server.Service.Test/: UnitTest1.cs  View.Server.Service.Test.csproj
server/View.Server.Service/Services/: BuildingService.cs  FloorService.cs  IoTDeviceService.cs  OccupationService.cs  RoomService.cs  UserValidationService.cs
server/View.Server.Service/Stores/: OcupationServiceStore.cs
server/View.Server.Shared/: View.Server.Shared.csproj
server/View.Server.Shared/Data/: Building.cs  Floor.cs  IoTDevice.cs  Occupation.cs  Room.cs
server/View.Server.Shared/Data/UserManagement/: User.cs
server/View.Server.Shared/DataAccesses/: IBuildingDataAccess.cs  IFloorDataAccess.cs  IIoTDeviceDataAccess.cs  IOccupationDataAccess.cs  IRoomDataAccess.cs
server/View.Server.Shared/IoTAccess/: IIoTAccess.cs  WsIotDelegates.cs
server/View.Server.Shared/Services/: IBuildingService.cs  IFloorService.cs  IIotDeviceService.cs  IOccupationService.cs  IRoomService.cs  IUserValidationService.cs
server/View.Server.WebAPI/: Program.cs  Startup.cs  View.Server.WebAPI.csproj  appsettings.json
server/View.Server.WebAPI/Controllers/: BuildingController.cs  FloorController.cs  IotDeviceController.cs  OccupationController.cs  RoomController.cs  UserController.cs
server/View.Server.WebAPI/Models/: UserLogin.cs
server/View.Server.WebAPI/Properties/: launchSettings.json
server/View.Server.WebAPI/Proxies/DataAccesses/: IoTDeviceDataAccessScopedProxy.cs  OccuptionDataAccessScopedProxy.cs  RoomDataAccessScopedProxy.cs
server/View.Server.WebAPI/Proxies/Services/: UserValidationServiceScopedProxy.cs
server/View.Server.WebAPI/WebsocketServices/: FrontendWebsocketService.cs  WebsocketHelper.cs
server/View.Server.WsIoTAccess/: View.Server.WsIoTAccess.csproj  WsIoTAccess.cs
server/View.Server.WsIoTAccess/Messages/: IoTMessage.cs  MessageType.cs
server/View.Server.WsIoTAccess/Messages/Parameters/: LoginIoTDeviceParameters.cs  PersonCountChangedParameters.cs
(+55 files in other folders)
